[package]
name = "xs-http"
version = "0.1.0"
edition = "2021"
description = "Instant HTTP API testing suite - type-safe alternative to Postman/curl"
license = "MIT"
repository = "https://github.com/polysystems/x-http"
keywords = ["http", "testing", "api", "cli", "rest"]
categories = ["development-tools::testing", "command-line-utilities", "web-programming::http-client"]

[[bin]]
name = "x-http"
path = "src/main.rs"

[lib]
name = "x_http"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking", "cookies"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
toml = "0.8"
url = "2.5"
serde_path_to_error = "0.1"
syntect = "5.2"
tabled = "0.15"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
wiremock = "0.6"
predicates = "3.1"
